2002-03-03  Andras Varga

       	* cpar.h: valueChanges() renamed to beforeChange(); corresponding
        afterChange() method added

       	* macros.h, ctypes.h: Register_Class(), cClassRegister can now be used
        to create instances of non-cObject classes too; as part of this change,
        createOne() return value changed from cObject* to void*.

	* csimul.h: management of various output files (output vector file,
	output scalar file, snapshot file) was moved from cSimulation to the
	user interface library (behind the ev facade); new methods were added
	to cEnvir to support this. (See also following items.)

	* cenvir.h: added new methods to cEnvir: registerOutputVector(),
	deregisterOutputVector(), overloaded recordInOutputVector() methods,
	overloaded recordScalar() methods, getStreamForSnapshot(),
	releaseStreamForSnapshot().

        * coutvect.h: management of output vector file including start time
        and stop time of vectors was completely moved to the user interface
        library; startTime()/stopTime() methods were removed from cOutVector.
        The cOutFileMgr class was removed altogether.

        * envirext.h added: contains abstract classes that can be used to extend
        the functionality of the standard user interface library (src/envir)
        via a plugin mechanism: cOutputVectorManager, cOutputScalarManager,
        cSnapshotManager.

        * index.h: EnvirExtensions doc group added (contains classes in envirext.h)

        * cpar.cc: module parameter change logging feature removed for various
        reasons. (If you miss it, let me know!)

2002-02-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cllist.h (cLinkedList): Doc-fix for cLinkedList::insert()

2002-02-21  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cobject.h: extended description of CompareFunc regarding return values

	* cqueue.h (cQueue): fixed CompareFunc arguments in Queue class description

2001-10-28 Andras Varga
